--- a/.env.template
+++ b/.env.template
@@ -11,7 +11,7 @@ PROXY_URL=http://localhost:7890
 # Override openai api request base url. (optional)
 # Default: https://api.openai.com
 # Examples: http://your-openai-proxy.com
-BASE_URL=http://1.95.6.5:9092/
+BASE_URL=https://www.safebition.com/ai
 
 # Specify OpenAI organization ID.(optional)
 # Default: Empty
